--- a/7_Acknowledgments.Rmd
+++ b/7_Acknowledgments.Rmd
@@ -4,7 +4,7 @@ Many people were instrumental in the successful completion of this assessment an
 
 We are very grateful to Patrick McDonald and the team of agers at CAP for their hard work reading numerous otoliths and availability to answer questions when needed. Beth Horness was always eager to help, quick to supply survey extractions, and answered numerous questions we had. Jason Jannot and Kayleigh Sommers assisted with data from the WCGOP and entertained our many questions.  We appreciate Melissa Head's effort to produce updated maturity estimates for the assessment. We would like to acknowledge our survey team and their dedication to improving the assessments we do. The assessment was greatly improved through the many discussions within the Population Ecology team in the FRAM division at the NWFSC.
 
-The reviews of the STAR panel (Norman Hall, Kevin Piner, and Yiota Apostolaki) and STAR panel chair (David Sampson), the GMT representative (Lynn Mattes), and the GAP representative (Louie Zimm) are greatly appreciated for their patience, advice, focus, understanding, and comments during and after the STAR panel meeting.  John Devore was an indispensible resource of the past, current, and future management as well as a great organizer and representative of the Pacific Fishery Mangement Council.
+The reviews of the STAR panel (Norman Hall, Kevin Piner, and Yiota Apostolaki) and STAR panel chair (David Sampson), the GMT representative (Lynn Mattes), and the GAP representative (Louie Zimm) are greatly appreciated for their patience, advice, focus, understanding, and comments during and after the STAR panel meeting.  John Devore was an indispensable resource of the past, current, and future management as well as a great organizer and representative of the Pacific Fishery Management Council.
 
 \newpage
 \FloatBarrier
