--- a/PacificOceanPerch2017_Assessment.tex
+++ b/PacificOceanPerch2017_Assessment.tex
@@ -731,27 +731,27 @@ Year & OFL & ABC & Spawning Output (million eggs) & Relative Depletion (\%) \\
  \hline
  & Year & Catch & Spawning Output & Depletion (\%) & Spawning Output & Depletion (\%) & Spawning Output & Depletion (\%) \\ 
   \hline
- & 2019 & 4340 & 3944 & 63 & 5741 & 83 & 7505 & 97 \\ 
-   & 2020 & 4229 & 3909 & 62 & 5745 & 83 & 7542 & 97 \\ 
-   & 2021 & 4108 & 3858 & 62 & 5723 & 83 & 7546 & 97 \\ 
-  ABC & 2022 & 3984 & 3784 & 60 & 5666 & 82 & 7503 & 97 \\ 
-   & 2023 & 3862 & 3695 & 59 & 5586 & 81 & 7427 & 96 \\ 
-   & 2024 & 3748 & 3600 & 57 & 5494 & 80 & 7332 & 95 \\ 
-   & 2025 & 3644 & 3502 & 56 & 5395 & 78 & 7226 & 93 \\ 
-   & 2026 & 3551 & 3404 & 54 & 5292 & 77 & 7113 & 92 \\ 
-   & 2027 & 3467 & 3308 & 53 & 5188 & 75 & 6996 & 90 \\ 
-   & 2028 & 3389 & 3213 & 51 & 5084 & 74 & 6879 & 89 \\ 
+ & 2019 & 4340 & 3944 & 62.9 & 5741 & 83.3 & 7505 & 96.8 \\ 
+   & 2020 & 4229 & 3909 & 62.4 & 5745 & 83.4 & 7542 & 97.3 \\ 
+   & 2021 & 4108 & 3858 & 61.6 & 5723 & 83.1 & 7546 & 97.3 \\ 
+  ABC & 2022 & 3984 & 3784 & 60.4 & 5666 & 82.2 & 7503 & 96.8 \\ 
+   & 2023 & 3862 & 3695 & 59.0 & 5586 & 81.1 & 7427 & 95.8 \\ 
+   & 2024 & 3748 & 3600 & 57.4 & 5494 & 79.7 & 7332 & 94.6 \\ 
+   & 2025 & 3644 & 3502 & 55.9 & 5395 & 78.3 & 7226 & 93.2 \\ 
+   & 2026 & 3551 & 3404 & 54.3 & 5292 & 76.8 & 7113 & 91.8 \\ 
+   & 2027 & 3467 & 3308 & 52.8 & 5188 & 75.3 & 6996 & 90.3 \\ 
+   & 2028 & 3389 & 3213 & 51.3 & 5084 & 73.8 & 6879 & 88.7 \\ 
    \hline
- & 2019 & 1822 & 3944 & 63 & 5741 & 83 & 7505 & 97 \\ 
-   & 2020 & 1822 & 4022 & 64 & 5857 & 85 & 7654 & 99 \\ 
-   & 2021 & 1822 & 4083 & 65 & 5946 & 86 & 7768 & 100 \\ 
-  SPR50 & 2022 & 1822 & 4117 & 66 & 5996 & 87 & 7830 & 101 \\ 
-   & 2023 & 1822 & 4131 & 66 & 6016 & 87 & 7852 & 101 \\ 
-   & 2024 & 1822 & 4133 & 66 & 6017 & 87 & 7848 & 101 \\ 
-   & 2025 & 1822 & 4125 & 66 & 6004 & 87 & 7824 & 101 \\ 
-   & 2026 & 1822 & 4110 & 66 & 5979 & 87 & 7786 & 100 \\ 
-   & 2027 & 1822 & 4090 & 65 & 5947 & 86 & 7736 & 100 \\ 
-   & 2028 & 1822 & 4067 & 65 & 5908 & 86 & 7679 & 99 \\ 
+ & 2019 & 1822 & 3944 & 62.9 & 5741 & 83.3 & 7505 & 96.8 \\ 
+   & 2020 & 1822 & 4022 & 64.2 & 5857 & 85.0 & 7654 & 98.7 \\ 
+   & 2021 & 1822 & 4083 & 65.1 & 5946 & 86.3 & 7768 & 100.2 \\ 
+  SPR50 & 2022 & 1822 & 4117 & 65.7 & 5996 & 87.0 & 7830 & 101.0 \\ 
+   & 2023 & 1822 & 4131 & 65.9 & 6016 & 87.3 & 7852 & 101.3 \\ 
+   & 2024 & 1822 & 4133 & 65.9 & 6017 & 87.3 & 7848 & 101.2 \\ 
+   & 2025 & 1822 & 4125 & 65.8 & 6004 & 87.1 & 7824 & 100.9 \\ 
+   & 2026 & 1822 & 4110 & 65.6 & 5979 & 86.8 & 7786 & 100.4 \\ 
+   & 2027 & 1822 & 4090 & 65.3 & 5947 & 86.3 & 7736 & 99.8 \\ 
+   & 2028 & 1822 & 4067 & 64.9 & 5908 & 85.8 & 7679 & 99.1 \\ 
    \hline
 \end{tabular}
 }
@@ -2243,13 +2243,14 @@ in Figure \ref{fig:total_discard}.
 Fits to the length data are shown based on the proportions of lengths
 observed by year and the Pearson residuals-at-length for all fleets.
 Detailed fits to the length data by year and fleet are provided in
-Appendix \ref{appendix-a.-detailed-fit-to-length-composition-data}.
-Aggregate fits by fleet are shown in Figure \ref{fig:length_agg}. There
-are a few things that stand out when examining the aggregated length
-composition data. First, the sexed discard lengths appear to be poorly
-fit by the model but this is related to small sample sizes. The NWFSC
-slope survey lengths were under estimated by the model, but these data
-only represent two years.
+Appendix A, section
+\ref{appendix-a.-detailed-fit-to-length-composition-data}. Aggregate
+fits by fleet are shown in Figure \ref{fig:length_agg}. There are a few
+things that stand out when examining the aggregated length composition
+data. First, the sexed discard lengths appear to be poorly fit by the
+model but this is related to small sample sizes. The NWFSC slope survey
+lengths were under estimated by the model, but these data only represent
+two years.
 
 Discard lengths from WCGOP were fit well by the model and show no
 obvious pattern in the residuals (Figure \ref{fig:discard_len_pearson}).
@@ -2298,7 +2299,7 @@ the fishery fleet which had the largest sample of ages. The at-sea hake
 fishery and the surveys had significantly lower sample sizes that
 resulted in spiky patterns in the aggregated data. However, the model
 generally captured the pattern of the data. Detailed fits to the age
-data by year and fleet are provided in Appendix
+data by year and fleet are provided in Appendix B, section
 \ref{appendix-b.-detailed-fit-to-age-composition-data}.
 
 The Pearson residuals for the main fishery fleet are shown in Figure
@@ -2621,9 +2622,9 @@ Apostolaki) and STAR panel chair (David Sampson), the GMT representative
 (Lynn Mattes), and the GAP representative (Louie Zimm) are greatly
 appreciated for their patience, advice, focus, understanding, and
 comments during and after the STAR panel meeting. John Devore was an
-indispensible resource of the past, current, and future management as
+indispensable resource of the past, current, and future management as
 well as a great organizer and representative of the Pacific Fishery
-Mangement Council.
+Management Council.
 
 \newpage
 
@@ -3038,7 +3039,7 @@ Depth & 155-500 & 183-549 & 183-549 & 55-549 \\
 
 \begin{table}[ht]
 \centering
-\caption{Summary of the design based estimates of fishery-independent biomass/abundance
+\caption{Summary of the design-based estimates of fishery-independent biomass/abundance
                                          time-series.} 
 \label{tab:Design_Based}
 \begin{tabular}{>{\centering}p{.4in}>{\centering}p{.6in}>{\centering}p{.3in}>{\centering}p{.6in}>{\centering}p{.3in}>{\centering}p{.6in}>{\centering}p{.3in}>{\centering}p{.6in}>{\centering}p{.3in}}
@@ -3487,7 +3488,7 @@ Starting year & 1918 \\
 Fleet & Lengths & Ages \\ 
   \hline
 Fishery & 0.096 & 0.217 \\ 
-  At-sea hake & 0.104 & 0.0318 \\ 
+  At-sea hake & 0.104 & 0.032 \\ 
   Pacific ocean perch survey  & 1.000 & 1 \\ 
   AFSC slope survey & 0.077 & - \\ 
   NWFSC slope survey & 0.565 & 0.304 \\ 
@@ -3943,18 +3944,18 @@ Fishery & 0.361 & 0.77 \\
 \label{tab:Forecast_mod1}
 \begin{tabular}{c>{\centering}p{1in}>{\centering}p{1in}>{\centering}p{1in}>{\centering}p{1in}}
   \hline
-Year & OFL (mt) & ACL (mt) & Spawning Output & Depletion \\ 
+Year & OFL (mt) & ACL (mt) & Spawning Output & Depletion (\%) \\ 
   \hline
-2019 & 4753 & 4340 & 5741 & 83.34 \\ 
-  2020 & 4632 & 4229 & 5745 & 83.39 \\ 
-  2021 & 4499 & 4108 & 5723 & 83.07 \\ 
-  2022 & 4364 & 3984 & 5666 & 82.25 \\ 
-  2023 & 4230 & 3862 & 5586 & 81.09 \\ 
-  2024 & 4105 & 3748 & 5494 & 79.75 \\ 
-  2025 & 3991 & 3644 & 5395 & 78.31 \\ 
-  2026 & 3889 & 3551 & 5292 & 76.82 \\ 
-  2027 & 3797 & 3467 & 5188 & 75.31 \\ 
-  2028 & 3712 & 3389 & 5084 & 73.80 \\ 
+2019 & 4753 & 4340 & 5741 & 83.3 \\ 
+  2020 & 4632 & 4229 & 5745 & 83.4 \\ 
+  2021 & 4499 & 4108 & 5723 & 83.1 \\ 
+  2022 & 4364 & 3984 & 5666 & 82.2 \\ 
+  2023 & 4230 & 3862 & 5586 & 81.1 \\ 
+  2024 & 4105 & 3748 & 5494 & 79.8 \\ 
+  2025 & 3991 & 3644 & 5395 & 78.3 \\ 
+  2026 & 3889 & 3551 & 5292 & 76.8 \\ 
+  2027 & 3797 & 3467 & 5188 & 75.3 \\ 
+  2028 & 3712 & 3389 & 5084 & 73.8 \\ 
    \hline
 \end{tabular}
 \end{table}
@@ -3984,27 +3985,27 @@ Year & OFL (mt) & ACL (mt) & Spawning Output & Depletion \\
  \hline
  & Year & Catch & Spawning Output & Depletion (\%) & Spawning Output & Depletion (\%) & Spawning Output & Depletion (\%) \\ 
   \hline
- & 2019 & 4339.76 & 3943.77 & 62.92 & 5741.37 & 83.34 & 7505.04 & 96.82 \\ 
-   & 2020 & 4229.15 & 3909.49 & 62.37 & 5744.84 & 83.39 & 7541.79 & 97.29 \\ 
-   & 2021 & 4107.52 & 3857.94 & 61.55 & 5722.83 & 83.07 & 7546.05 & 97.35 \\ 
-  ABC & 2022 & 3983.93 & 3783.71 & 60.37 & 5666.34 & 82.25 & 7503.29 & 96.80 \\ 
-   & 2023 & 3862.33 & 3695.05 & 58.95 & 5586.48 & 81.09 & 7427.39 & 95.82 \\ 
-   & 2024 & 3747.84 & 3599.80 & 57.43 & 5494.03 & 79.75 & 7332.48 & 94.59 \\ 
-   & 2025 & 3643.98 & 3502.09 & 55.87 & 5394.68 & 78.31 & 7226.11 & 93.22 \\ 
-   & 2026 & 3550.87 & 3404.27 & 54.31 & 5291.93 & 76.82 & 7113.04 & 91.76 \\ 
-   & 2027 & 3466.85 & 3307.62 & 52.77 & 5187.98 & 75.31 & 6996.42 & 90.26 \\ 
-   & 2028 & 3389.32 & 3212.89 & 51.26 & 5084.38 & 73.80 & 6878.58 & 88.74 \\ 
+ & 2019 & 4340 & 3944 & 62.9 & 5741 & 83.3 & 7505 & 96.8 \\ 
+   & 2020 & 4229 & 3909 & 62.4 & 5745 & 83.4 & 7542 & 97.3 \\ 
+   & 2021 & 4108 & 3858 & 61.6 & 5723 & 83.1 & 7546 & 97.3 \\ 
+  ABC & 2022 & 3984 & 3784 & 60.4 & 5666 & 82.2 & 7503 & 96.8 \\ 
+   & 2023 & 3862 & 3695 & 59.0 & 5586 & 81.1 & 7427 & 95.8 \\ 
+   & 2024 & 3748 & 3600 & 57.4 & 5494 & 79.7 & 7332 & 94.6 \\ 
+   & 2025 & 3644 & 3502 & 55.9 & 5395 & 78.3 & 7226 & 93.2 \\ 
+   & 2026 & 3551 & 3404 & 54.3 & 5292 & 76.8 & 7113 & 91.8 \\ 
+   & 2027 & 3467 & 3308 & 52.8 & 5188 & 75.3 & 6996 & 90.3 \\ 
+   & 2028 & 3389 & 3213 & 51.3 & 5084 & 73.8 & 6879 & 88.7 \\ 
    \hline
- & 2019 & 1822.00 & 3943.77 & 62.92 & 5741.37 & 83.34 & 7505.04 & 96.82 \\ 
-   & 2020 & 1822.00 & 4022.28 & 64.17 & 5857.17 & 85.02 & 7653.65 & 98.73 \\ 
-   & 2021 & 1822.00 & 4082.53 & 65.13 & 5945.72 & 86.31 & 7767.53 & 100.20 \\ 
-  SPR50 & 2022 & 1822.00 & 4116.72 & 65.68 & 5995.61 & 87.03 & 7829.59 & 101.00 \\ 
-   & 2023 & 1822.00 & 4131.25 & 65.91 & 6016.17 & 87.33 & 7851.89 & 101.29 \\ 
-   & 2024 & 1822.00 & 4132.83 & 65.94 & 6017.09 & 87.34 & 7847.57 & 101.24 \\ 
-   & 2025 & 1822.00 & 4125.08 & 65.81 & 6003.62 & 87.15 & 7823.84 & 100.93 \\ 
-   & 2026 & 1822.00 & 4110.39 & 65.58 & 5979.34 & 86.79 & 7785.59 & 100.44 \\ 
-   & 2027 & 1822.00 & 4090.44 & 65.26 & 5946.86 & 86.32 & 7736.45 & 99.80 \\ 
-   & 2028 & 1822.00 & 4066.56 & 64.88 & 5908.30 & 85.76 & 7679.35 & 99.07 \\ 
+ & 2019 & 1822 & 3944 & 62.9 & 5741 & 83.3 & 7505 & 96.8 \\ 
+   & 2020 & 1822 & 4022 & 64.2 & 5857 & 85.0 & 7654 & 98.7 \\ 
+   & 2021 & 1822 & 4083 & 65.1 & 5946 & 86.3 & 7768 & 100.2 \\ 
+  SPR50 & 2022 & 1822 & 4117 & 65.7 & 5996 & 87.0 & 7830 & 101.0 \\ 
+   & 2023 & 1822 & 4131 & 65.9 & 6016 & 87.3 & 7852 & 101.3 \\ 
+   & 2024 & 1822 & 4133 & 65.9 & 6017 & 87.3 & 7848 & 101.2 \\ 
+   & 2025 & 1822 & 4125 & 65.8 & 6004 & 87.1 & 7824 & 100.9 \\ 
+   & 2026 & 1822 & 4110 & 65.6 & 5979 & 86.8 & 7786 & 100.4 \\ 
+   & 2027 & 1822 & 4090 & 65.3 & 5947 & 86.3 & 7736 & 99.8 \\ 
+   & 2028 & 1822 & 4067 & 64.9 & 5908 & 85.8 & 7679 & 99.1 \\ 
    \hline
 \end{tabular}
 }
@@ -4390,8 +4391,9 @@ all years from the fishery. \label{fig:total_discard}}
 \includegraphics{r4ss/plots_mod1/comp_lenfit__aggregated_across_time.png}
 \caption{Length compositions aggregated across time by fleet. Labels
 `retained' and `discard' indicate retained or discarded samples for each
-fleet. Panels without this designation represent the whole catch.
-\label{fig:length_agg}}
+fleet. Panels without this designation represent the whole catch. The
+Triennial shelf survey length data were not used in the final model, but
+the implied model fits are shown. \label{fig:length_agg}}
 \end{figure}
 
 \begin{figure}
@@ -4433,9 +4435,8 @@ and open bubbles are negative residuals (observed \textless{} expected).
 
 \begin{figure}
 \centering
-\includegraphics{r4ss/plots_mod1/comp_lenfit_residsflt5mkt0.png}
-\caption{Pearson residuals, whole catch, Triennial shelf survey
-(max=4.38)\\
+\includegraphics{r4ss/plots_mod1/comp_lenfit_residsflt6mkt0.png}
+\caption{Pearson residuals, whole catch, AFSC slope survey (max=2.88)\\
 Closed bubbles are positive residuals (observed \textgreater{} expected)
 and open bubbles are negative residuals (observed \textless{} expected).
 \label{fig:afsc_len_pearson}}
@@ -4443,8 +4444,8 @@ and open bubbles are negative residuals (observed \textless{} expected).
 
 \begin{figure}
 \centering
-\includegraphics{r4ss/plots_mod1/comp_lenfit_residsflt6mkt0.png}
-\caption{Pearson residuals, whole catch, AFSC slope survey (max=2.88)\\
+\includegraphics{r4ss/plots_mod1/comp_lenfit_residsflt7mkt0.png}
+\caption{Pearson residuals, whole catch, NWFSC slope survey (max=3.38)\\
 Closed bubbles are positive residuals (observed \textgreater{} expected)
 and open bubbles are negative residuals (observed \textless{} expected).
 \label{fig:nwfsc_len_pearson}}
@@ -4452,8 +4453,9 @@ and open bubbles are negative residuals (observed \textless{} expected).
 
 \begin{figure}
 \centering
-\includegraphics{r4ss/plots_mod1/comp_lenfit_residsflt7mkt0.png}
-\caption{Pearson residuals, whole catch, NWFSC slope survey (max=3.38)\\
+\includegraphics{r4ss/plots_mod1/comp_lenfit_residsflt8mkt0.png}
+\caption{Pearson residuals, whole catch, NWFSC shelf\_slope survey
+(max=2.85)\\
 Closed bubbles are positive residuals (observed \textgreater{} expected)
 and open bubbles are negative residuals (observed \textless{} expected).
 \label{fig:nwfsc_combo_len_pearson}}
@@ -4500,19 +4502,6 @@ Fish. Aquat. Sci. 68: 1124\_1138. \label{fig:weighting_len_pop}}
 
 \begin{figure}
 \centering
-\includegraphics{r4ss/plots_mod1/comp_lenfit_data_weighting_TA1.8_Triennial shelf survey.png}
-\caption{Mean length for Triennial shelf survey with 95\% confidence
-intervals based on current samples sizes. Francis data weighting method
-TA1.8: thinner intervals (with capped ends) show result of further
-adjusting sample sizes based on suggested multiplier (with 95\%
-interval) for len data from Triennial shelf survey: 0.9773
-(0.5566\_5.1838) For more info, see Francis, R.I.C.C. (2011). Data
-weighting in statistical fisheries stock assessment models. Can. J.
-Fish. Aquat. Sci. 68: 1124\_1138. \label{fig:weighting_len_afsc}}
-\end{figure}
-
-\begin{figure}
-\centering
 \includegraphics{r4ss/plots_mod1/comp_lenfit_data_weighting_TA1.8_AFSC slope survey.png}
 \caption{Mean length for AFSC slope survey with 95\% confidence
 intervals based on current samples sizes. Francis data weighting method
@@ -4521,7 +4510,7 @@ adjusting sample sizes based on suggested multiplier (with 95\%
 interval) for len data from AFSC slope survey: 0.9963 (0.5782\_16.165)
 For more info, see Francis, R.I.C.C. (2011). Data weighting in
 statistical fisheries stock assessment models. Can. J. Fish. Aquat. Sci.
-68: 1124\_1138. \label{fig:weighting_len_nwfsc}}
+68: 1124\_1138. \label{fig:weighting_len_afsc}}
 \end{figure}
 
 \begin{figure}
@@ -4534,7 +4523,20 @@ adjusting sample sizes based on suggested multiplier (with 95\%
 interval) for len data from NWFSC slope survey: 0.9971 (0.9971\_Inf) For
 more info, see Francis, R.I.C.C. (2011). Data weighting in statistical
 fisheries stock assessment models. Can. J. Fish. Aquat. Sci. 68:
-1124\_1138. \label{fig:weighting_len_nwfsccombo}}
+1124\_1138. \label{fig:weighting_len_nwfsc}}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics{r4ss/plots_mod1/comp_lenfit_data_weighting_TA1.8_NWFSC shelf-slope survey.png}
+\caption{Mean length for NWFSC shelf\_slope survey with 95\% confidence
+intervals based on current samples sizes. Francis data weighting method
+TA1.8: thinner intervals (with capped ends) show result of further
+adjusting sample sizes based on suggested multiplier (with 95\%
+interval) for len data from NWFSC shelf\_slope survey: 1.0149
+(0.594\_4.0526) For more info, see Francis, R.I.C.C. (2011). Data
+weighting in statistical fisheries stock assessment models. Can. J.
+Fish. Aquat. Sci. 68: 1124\_1138. \label{fig:weighting_len_nwfsccombo}}
 \end{figure}
 
 \FloatBarrier
@@ -4542,8 +4544,9 @@ fisheries stock assessment models. Can. J. Fish. Aquat. Sci. 68:
 \begin{figure}
 \centering
 \includegraphics{r4ss/plots_mod1/comp_agefit__aggregated_across_time.png}
-\caption{Age compositions aggregated across time by fleet.
-\label{fig:age_agg}}
+\caption{Age compositions aggregated across time by fleet. The Triennial
+shelf survey age data were not used in the final model, but the implied
+model fits are shown. \label{fig:age_agg}}
 \end{figure}
 
 \begin{figure}
@@ -4576,9 +4579,8 @@ and open bubbles are negative residuals (observed \textless{} expected).
 
 \begin{figure}
 \centering
-\includegraphics{r4ss/plots_mod1/comp_agefit_residsflt5mkt0.png}
-\caption{Pearson residuals, whole catch, Triennial shelf survey
-(max=4.09)\\
+\includegraphics{r4ss/plots_mod1/comp_agefit_residsflt7mkt0.png}
+\caption{Pearson residuals, whole catch, NWFSC slope survey (max=2.28)\\
 Closed bubbles are positive residuals (observed \textgreater{} expected)
 and open bubbles are negative residuals (observed \textless{} expected).
 \label{fig:nwfsc_age_pearson}}
@@ -4651,15 +4653,15 @@ assessment models. Can. J. Fish. Aquat. Sci. 68: 1124\_1138.
 
 \begin{figure}
 \centering
-\includegraphics{r4ss/plots_mod1/comp_agefit_data_weighting_TA1.8_Triennial shelf survey.png}
-\caption{Mean age for Triennial shelf survey with 95\% confidence
-intervals based on current samples sizes. Francis data weighting method
-TA1.8: thinner intervals (with capped ends) show result of further
-adjusting sample sizes based on suggested multiplier (with 95\%
-interval) for age data from Triennial shelf survey: 0.9594
-(0.6018\_5.5847) For more info, see Francis, R.I.C.C. (2011). Data
-weighting in statistical fisheries stock assessment models. Can. J.
-Fish. Aquat. Sci. 68: 1124\_1138. \label{fig:weighting_nwfscslope}}
+\includegraphics{r4ss/plots_mod1/comp_agefit_data_weighting_TA1.8_NWFSC slope survey.png}
+\caption{Mean age for NWFSC slope survey with 95\% confidence intervals
+based on current samples sizes. Francis data weighting method TA1.8:
+thinner intervals (with capped ends) show result of further adjusting
+sample sizes based on suggested multiplier (with 95\% interval) for age
+data from NWFSC slope survey: 1.0004 (1.0004\_Inf) For more info, see
+Francis, R.I.C.C. (2011). Data weighting in statistical fisheries stock
+assessment models. Can. J. Fish. Aquat. Sci. 68: 1124\_1138.
+\label{fig:weighting_nwfscslope}}
 \end{figure}
 
 \begin{figure}
@@ -4894,13 +4896,6 @@ Data}\label{appendix-a.-detailed-fit-to-length-composition-data}
 
 \begin{figure}
 \centering
-\includegraphics{r4ss/plots_mod1/comp_lenfit_flt5mkt0.png}
-\caption{Length comps, whole catch, Triennial shelf survey
-\label{fig:length_fits}}
-\end{figure}
-
-\begin{figure}
-\centering
 \includegraphics{r4ss/plots_mod1/comp_lenfit_flt6mkt0.png}
 \caption{Length comps, whole catch, AFSC slope survey
 \label{fig:length_fits}}
@@ -4910,6 +4905,13 @@ Data}\label{appendix-a.-detailed-fit-to-length-composition-data}
 \centering
 \includegraphics{r4ss/plots_mod1/comp_lenfit_flt7mkt0.png}
 \caption{Length comps, whole catch, NWFSC slope survey
+\label{fig:length_fits}}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics{r4ss/plots_mod1/comp_lenfit_flt8mkt0.png}
+\caption{Length comps, whole catch, NWFSC shelf\_slope survey
 \label{fig:length_fits}}
 \end{figure}
 
@@ -4947,17 +4949,8 @@ Data}\label{appendix-b.-detailed-fit-to-age-composition-data}
 
 \begin{figure}
 \centering
-\includegraphics{r4ss/plots_mod1/comp_agefit_flt5mkt0.png}
-\caption{Age comps, whole catch, Triennial shelf survey
-\label{fig:age_fits}}
-\end{figure}
-
-\begin{figure}
-\centering
-\includegraphics{r4ss/plots_mod1/comp_agefit__aggregated_across_time.png}
-\caption{Age comps, aggregated across time by fleet. Labels `retained'
-and `discard' indicate discarded or retained sampled for each fleet.
-Panels without this designation represent the whole catch.
+\includegraphics{r4ss/plots_mod1/comp_gstagefit_flt8mkt0.png}
+\caption{Ghost age comps, whole catch, NWFSC shelf\_slope survey
 \label{fig:age_fits}}
 \end{figure}
 
@@ -5008,13 +5001,33 @@ from this survey are shown in Figures \ref{fig:Tri_Length} and
    & \multicolumn{2}{c}{Fishery CPUE} &  \multicolumn{2}{c}{Triennial} \\
  Year & Obs & SE & Obs & SE \\
  \hline
-1979 & 56460.60 & 0.27 & - & - \\ 
-  1985 & 34645.20 & 0.29 & - & - \\ 
-  1996 & - & - & 7621 & 0.51 \\ 
-  1997 & - & - & 3807 & 0.51 \\ 
-  1999 & - & - & 4694 & 0.50 \\ 
-  2000 & - & - & 4243 & 0.53 \\ 
-  2001 & - & - & 4187 & 0.49 \\ 
+1956 & 0.40 & 0.40 & - & - \\ 
+  1957 & 0.30 & 0.40 & - & - \\ 
+  1958 & 0.32 & 0.40 & - & - \\ 
+  1959 & 0.29 & 0.40 & - & - \\ 
+  1960 & 0.28 & 0.40 & - & - \\ 
+  1961 & 0.31 & 0.40 & - & - \\ 
+  1962 & 0.29 & 0.40 & - & - \\ 
+  1963 & 0.34 & 0.40 & - & - \\ 
+  1964 & 0.35 & 0.40 & - & - \\ 
+  1965 & 0.55 & 0.40 & - & - \\ 
+  1966 & 0.47 & 0.40 & - & - \\ 
+  1967 & 0.30 & 0.40 & - & - \\ 
+  1968 & 0.17 & 0.40 & - & - \\ 
+  1969 & 0.18 & 0.40 & - & - \\ 
+  1970 & 0.17 & 0.40 & - & - \\ 
+  1971 & 0.20 & 0.40 & - & - \\ 
+  1972 & 0.20 & 0.40 & - & - \\ 
+  1973 & 0.11 & 0.40 & - & - \\ 
+  1980 & - & - & 10384 & 0.64 \\ 
+  1983 & - & - & 8974 & 0.59 \\ 
+  1986 & - & - & 2977 & 0.65 \\ 
+  1989 & - & - & 4873 & 0.65 \\ 
+  1992 & - & - & 3207 & 0.64 \\ 
+  1995 & - & - & 2724 & 0.62 \\ 
+  1998 & - & - & 4163 & 0.63 \\ 
+  2001 & - & - & 1494 & 0.63 \\ 
+  2004 & - & - & 2922 & 0.67 \\ 
    \hline
 \end{tabular}
 \end{table}
