--- a/9_Figures.Rmd
+++ b/9_Figures.Rmd
@@ -289,7 +289,7 @@
 <!-- ****************Length Composition Fits and EffN********************** --> 
 <!-- ********************************************************************** -->
 
-![Length compositions aggregated across time by fleet. Labels 'retained' and 'discard' indicate retained or discarded samples for each fleet. Panels without this designation represent the whole catch. \label{fig:length_agg}](r4ss/plots_mod1/comp_lenfit__aggregated_across_time.png)
+![Length compositions aggregated across time by fleet. Labels 'retained' and 'discard' indicate retained or discarded samples for each fleet. Panels without this designation represent the whole catch.  The Triennial shelf survey length data were not used in the final model, but the implied model fits are shown. \label{fig:length_agg}](r4ss/plots_mod1/comp_lenfit__aggregated_across_time.png)
 
 ```{r, results='asis'}
 
@@ -309,13 +309,13 @@ cat('\n![', LenComp_mod1[17,caption_col], ' \\label{fig:pop_len_pearson}](r4ss/p
 #cat('\n![', LenComp_mod1[21,caption_col], ' \\label{fig:tri_len_pearson}](r4ss/plots_mod1/', LenComp_mod1[21, path_col], ')\n', sep='')
 
 #AFSC
-cat('\n![', LenComp_mod1[21,caption_col], ' \\label{fig:afsc_len_pearson}](r4ss/plots_mod1/', LenComp_mod1[21, path_col], ')\n', sep='')
+cat('\n![', LenComp_mod1[25,caption_col], ' \\label{fig:afsc_len_pearson}](r4ss/plots_mod1/', LenComp_mod1[25, path_col], ')\n', sep='')
 
 #NWFSC
-cat('\n![', LenComp_mod1[25,caption_col], ' \\label{fig:nwfsc_len_pearson}](r4ss/plots_mod1/', LenComp_mod1[25, path_col], ')\n', sep='')
+cat('\n![', LenComp_mod1[29,caption_col], ' \\label{fig:nwfsc_len_pearson}](r4ss/plots_mod1/', LenComp_mod1[29, path_col], ')\n', sep='')
 
 #NWFSC Combo
-cat('\n![', LenComp_mod1[29,caption_col], ' \\label{fig:nwfsc_combo_len_pearson}](r4ss/plots_mod1/', LenComp_mod1[29, path_col], ')\n', sep='')
+cat('\n![', LenComp_mod1[33,caption_col], ' \\label{fig:nwfsc_combo_len_pearson}](r4ss/plots_mod1/', LenComp_mod1[33, path_col], ')\n', sep='')
 
 ```
 
@@ -337,13 +337,13 @@ cat('\n![', LenComp_mod1[19,caption_col], ' \\label{fig:weighting_len_pop}](r4ss
 #cat('\n![', LenComp_mod1[23,caption_col], ' \\label{fig:weighting_len_triennial}](r4ss/plots_mod1/', LenComp_mod1[23, path_col], ')\n', sep='')
 
 #AFSC
-cat('\n![', LenComp_mod1[23,caption_col], ' \\label{fig:weighting_len_afsc}](r4ss/plots_mod1/', LenComp_mod1[23, path_col], ')\n', sep='')
+cat('\n![', LenComp_mod1[27,caption_col], ' \\label{fig:weighting_len_afsc}](r4ss/plots_mod1/', LenComp_mod1[27, path_col], ')\n', sep='')
 
 #NWFSC
-cat('\n![', LenComp_mod1[27,caption_col], ' \\label{fig:weighting_len_nwfsc}](r4ss/plots_mod1/', LenComp_mod1[27, path_col], ')\n', sep='')
+cat('\n![', LenComp_mod1[31,caption_col], ' \\label{fig:weighting_len_nwfsc}](r4ss/plots_mod1/', LenComp_mod1[31, path_col], ')\n', sep='')
 
 #NWFSC Combo
-cat('\n![', LenComp_mod1[31,caption_col], ' \\label{fig:weighting_len_nwfsccombo}](r4ss/plots_mod1/', LenComp_mod1[31, path_col], ')\n', sep='')
+cat('\n![', LenComp_mod1[35,caption_col], ' \\label{fig:weighting_len_nwfsccombo}](r4ss/plots_mod1/', LenComp_mod1[35, path_col], ')\n', sep='')
 
 ```
 
@@ -355,7 +355,7 @@ cat('\n![', LenComp_mod1[31,caption_col], ' \\label{fig:weighting_len_nwfsccombo
 <!-- ********************************************************************** -->
 
 
-![Age compositions aggregated across time by fleet.  \label{fig:age_agg}](r4ss/plots_mod1/comp_agefit__aggregated_across_time.png)
+![Age compositions aggregated across time by fleet. The Triennial shelf survey age data were not used in the final model, but the implied model fits are shown.  \label{fig:age_agg}](r4ss/plots_mod1/comp_agefit__aggregated_across_time.png)
 
 ```{r, results='asis'}
 
@@ -373,19 +373,13 @@ cat('\n![', AgeComp_mod1[11,caption_col], ' \\label{fig:pop_age_pearson}](r4ss/p
 #cat('\n![', AgeComp_mod1[15,caption_col], ' \\label{fig:tri_age_pearson}](r4ss/plots_mod1/', AgeComp_mod1[15, path_col], ')\n', sep='')
 
 #NWFSC
-cat('\n![', AgeComp_mod1[15,caption_col], ' \\label{fig:nwfsc_age_pearson}](r4ss/plots_mod1/', AgeComp_mod1[15, path_col], ')\n', sep='')
+cat('\n![', AgeComp_mod1[19,caption_col], ' \\label{fig:nwfsc_age_pearson}](r4ss/plots_mod1/', AgeComp_mod1[19, path_col], ')\n', sep='')
 
 plot.vec = 4:8
 for(a in 1:length(plot.vec)){
 #NWFSC Combo - Andre plots
 cat('\n![', AALComp_mod1[plot.vec[a],caption_col], ' \\label{fig:nwfsc_combo_andre_',a,'}](r4ss/plots_mod1/', AALComp_mod1[plot.vec[a], path_col], ')\n', sep='')
 }
-
-#NWFSC Combo
-#cat('\n![', AALComp_mod1[1,caption_col], ' \\label{fig:nwsfc_combo_age_aal1}](r4ss/plots_mod1/', AALComp_mod1[1, path_col], ')\n', sep='')
-
-#NWFSC Combo
-#cat('\n![', AALComp_mod1[2,caption_col], ' \\label{fig:nwsfc_combo_age_aal2}](r4ss/plots_mod1/', AALComp_mod1[2, path_col], ')\n', sep='')
 
 
 ```
@@ -407,7 +401,7 @@ cat('\n![', AgeComp_mod1[9,caption_col], ' \\label{fig:weighting_ashop}](r4ss/pl
 
 
 #NWFSC
-cat('\n![', AgeComp_mod1[17,caption_col], ' \\label{fig:weighting_nwfscslope}](r4ss/plots_mod1/', AgeComp_mod1[17, path_col], ')\n', sep='')
+cat('\n![', AgeComp_mod1[21,caption_col], ' \\label{fig:weighting_nwfscslope}](r4ss/plots_mod1/', AgeComp_mod1[21, path_col], ')\n', sep='')
 
 #NWFSC Combo
 cat('\n![', AALComp_mod1[3,caption_col], ' \\label{fig:weighting_nwfsccombo}](r4ss/plots_mod1/', AALComp_mod1[3, path_col], ')\n', sep='')
