--- a/PacificOceanPerch2017_Assessment.tex
+++ b/PacificOceanPerch2017_Assessment.tex
@@ -4969,26 +4969,30 @@ this period, the level of abundance was high at that time. The estimated
 index of abundance is shown in Table \ref{tab:CPUE_Summary} and Figure
 \ref{fig:Excluded_Indices}.
 
-An index of abundance was estimated based on the data using the VAST
-delta-GLMM model. The estimated index of abundance is shown in Table
-\ref{tab:CPUE_Summary} and Figure \ref{fig:Excluded_Indices}. The
-lognormal distribution with random strata-year had the lowest AIC and
-was chosen as the final model. The index shows a decline in abundance in
-the early years of the time-series and abundance remaining flat for the
-latter years.
+The Triennial shelf survey index of abundance was estimated based on the
+data using the VAST delta-GLMM model. The estimated index of abundance
+is shown in Table \ref{tab:CPUE_Summary} and Figure
+\ref{fig:Excluded_Indices}. The lognormal distribution with random
+strata-year had the lowest AIC and was chosen as the final model. The
+index shows a decline in abundance in the early years of the time-series
+and abundance remaining flat for the latter years.
 
-Length and age compositions were expanded based upon the survey
-stratification. The number of tows with length data ranged from 17 in
-1986 to 81 in 1998 (Table \ref{tab:TriennialLengths}). Ages were read
-using surface reading methods until 1989 when the break-and-burn method
-replaced surface reads as the best method to age Pacific ocean perch.
-Unfortunately, surface reading of Pacific ocean perch otoliths results
-in significant underestimates of age. Due to this, these otoliths were
-excluded from analysis. The available ages from the Triennial shelf
-survey and the number of tows where otoliths were collected are shown in
-Table \ref{tab:Triennial_Ages}. The expanded length and age frequencies
-from this survey are shown in Figures \ref{fig:Tri_Length} and
-\ref{fig:Tri_Age}, respectively.
+Triennial shelf survey length and age compositions were expanded based
+upon the survey stratification. The number of tows with length data
+ranged from 17 in 1986 to 81 in 1998 (Table \ref{tab:TriennialLengths}).
+Ages were read using surface reading methods until 1989 when the
+break-and-burn method replaced surface reads as the best method to age
+Pacific ocean perch. Unfortunately, surface reading of Pacific ocean
+perch otoliths results in significant underestimates of age. Due to
+this, these otoliths were excluded from analysis. The available ages
+from the Triennial shelf survey and the number of tows where otoliths
+were collected are shown in Table \ref{tab:Triennial_Ages}. The expanded
+length and age frequencies from this survey are shown in Figures
+\ref{fig:Tri_Length} and \ref{fig:Tri_Age}, respectively.
+
+Including the fishery CPUE or the Triennial survey data in the final
+base model had only negligible changes in the stock size and status
+(Figures \ref{fig:Excluded_Data_ssb} and \ref{fig:Excluded_Data_depl}).
 
 \begin{table}[ht]
 \centering
@@ -5106,10 +5110,128 @@ ocean perch. \label{fig:Tri_Age}}
 
 \FloatBarrier
 
+\begin{figure}
+\centering
+\includegraphics{Figures/ExcludedData_ssb.png}
+\caption{Plot comparison of spawning output when either the fishery CPUE
+or the Triennial shelf survey data are included in the base model for
+Pacific ocean perch. \label{fig:Excluded_Data_ssb}}
+\end{figure}
+
+\FloatBarrier
+
+\begin{figure}
+\centering
+\includegraphics{Figures/ExcludedData_depl.png}
+\caption{Plot comparison of depletion when either the fishery CPUE or
+the Triennial shelf survey data are included in the base model for
+Pacific ocean perch. \label{fig:Excluded_Data_depl}}
+\end{figure}
+
+\FloatBarrier
+
 \newpage
 
 \section{Appendix D. SSC Discussion Regarding
 Steepness}\label{appendix-d.-ssc-discussion-regarding-steepness}
+
+The Pacific ocean perch base model is highly sensitive to the assumption
+regarding steepness. Unfortunately, in the final base model the profile
+over steepness is flat across a wide range of potential values. The flat
+profile over steepness was in contrast to the previous assessment model
+from 2011 were the likelihood was minimized at a value of 0.40. The
+change in perceived information regarding steepness between this and the
+last assessment is due to the new data since 2011, updated data
+weighting approach, and minor changes in model structure. Given the lack
+of information regarding steepness, preliminary models explored using
+the median of the 2017 steepness prior, the endorse approach by the SSC
+when there is not information regarding steepness for a specific stock.
+However, using the steepness prior of 0.72 resulted in Pacific ocean
+perch being estimated near unfished conditions, a result that was in
+strong contrast to the previous assessment which estimated the stock
+size at approximately 20\% of unfished in 2011. Due to concerns of
+plausibility the STAT team presented an initial model to the STAR panel
+for review using an intermediate steepness value of 0.50. This value was
+selected because the resulting spawning output was encapsulated within
+the uncertainty from when steepness was assumed to be 0.40, the previous
+assessment value, and 0.72, the current steepness value. Over the course
+of the week of the STAR panel after many discussions both the STAR panel
+and the STAT team agreed that in the absence of information regarding
+steepness the base model should use the median of the prior. However,
+upon review by the SSC, it was concluded that the results of the
+assessment model were implausible when the steepness prior of 0.72. The
+SSC Groundfish Sub-Committee requested additional model exploration
+regarding steepness and re-examining the information the Triennial shelf
+survey may contain.
+
+Preliminary models included the Triennial shelf survey which was removed
+from the final base model during the STAR panel due to model lack of fit
+to this data-set which was in contrast to all other available data and
+concerns that this survey did not sample a representative subset of the
+population off the US west coast. Additionally, the model results with
+and without the Triennial survey data were negligible indicating that
+the other sources of information were the more influential data in the
+model. However, profiles over steepness from preliminary models which
+included the Triennial survey indicated that the index of abundance from
+this survey supported low steepness values (there was no information
+from the length or age composition data). The perceived information
+regarding steepness from this survey is due to a change in abundance
+between the first two data points of the Triennial survey index, 1980
+and 1983, which are higher than the subsequent years which drop to lower
+abundance levels from 1986 to 2004 (final year of the survey). A profile
+over steepness values when the Triennial shelf survey was used as a
+single time-series resulted in a profile that had a local minima of 0.75
+with global minimum occurring at a steepness value of 0.27 (Figure
+\ref{fig:Tri_Profile}). The estimated stock status when assuming a
+steepness value of 0.27, a value that is far lower than any other
+observed steepness value for a US west coast groundfish stock, was less
+that 10\% of the unfished spawning output in 2017. The STAT team and the
+SSC agreed that this was not a plausible result given the extensive
+efforts to rebuild Pacific ocean perch.
+
+The models explored regarding steepness either using the median of the
+prior or the value supported by the Triennial shelf survey index lead to
+quite different estimates of current depletion for Pacific ocean perch
+in 2017. Given the insufficient information to estimate steepness within
+the model an alternative approach for determining steepness was proposed
+by Dr.~Owen Hamel during the SSC Groundfish Sub-Committee. The
+description of the proposed method from the meeting notes is provided
+below.
+
+\emph{The GFSC {[}Groundfish Sub-Committee{]} therefore concluded that
+the available data are insufficient to estimate steepness. It is usual
+in this situation to base the assessment on the mean of the prior for
+steepness (0.72), but this value leads to an unrealistically low
+estimate of survey catchability (i.e.~model A {[}fixing steepness at
+0.27{]}), and the prior is rather diffuse with comparable support for
+values anywhere between 0.4 and 1.0. Dr.~Hamel provided a way to account
+for uncertainty in steepness that the GFSC recommends be adopted. This
+involves calculating current ending spawning output biomass for
+steepness values ranging from 0.25 to 0.95 in increments of 0.05 and
+assuming each value to be equally plausible). The expected (i.e.,
+arithmetic mean) ending spawning output is5,364 million eggs, which
+corresponds most closely to a steepness value of 0.5 (5,296 million eggs
+for the run in the profile). Thus, the model in which steepness is set
+to 0.5 represents the expected ending spawning output given steepness
+values between 0.225 and 0.975 are considered equally likely.}
+
+\emph{The GFSC {[}Groundfish Sub-Committee{]} therefore recommends that
+the base model be revised to fix steepness to 0.5. The final base model
+should be retuned, checked by jittering, and presented to the SSC for
+final approval and adoption.}
+
+The STAT team agreed with this recommendation to fix steepness at 0.50
+for the Pacific ocean perch base model.
+
+\begin{figure}
+\centering
+\includegraphics{Figures/triennial_piner_panel_h.png}
+\caption{Profile over steepness with the inclusion of the Triennial
+shelf survey when treated as a single time-series for Pacific ocean
+perch. \label{fig:Tri_Profile}}
+\end{figure}
+
+\FloatBarrier
 
 \section{Appendix E. List of Auxiliary Files
 Available}\label{appendix-e.-list-of-auxiliary-files-available}
