--- a/PacificOceanPerch2017_Assessment.tex
+++ b/PacificOceanPerch2017_Assessment.tex
@@ -3470,7 +3470,7 @@ Starting year & 1918 \\
   NWFSC shelf/slope survey & Double Normal \\ 
    &  \\ 
   \underline{Fishery time blocks} &  \\ 
-  Fishery selectivity & None \\ 
+  Fishery selectivity & 1918-1999, 2000-2016 \\ 
   Fishery retention & 1918-1991, 1992-2001, 2002-2007, 2008, 2009-2010, 2011-2016 \\ 
    \hline
 \end{tabular}
@@ -3708,117 +3708,106 @@ Unfished spawning output (million eggs) & 6889.2 &   4860.7 -   8917.6 \\
   \hline
 Year & Total biomass (mt) & Spawning output (million eggs) & Summary biomass 3+ & Relative biomass & Age-0 recruits & Estimated total catch (mt) & 1-SPR & Exploit. rate \\ 
   \hline \endhead  \hline
-1918 & 147,517 & 6,896 & 146,768 & 1.00 &  12,180 & 0 & 0 & 0 \\ 
-  1919 & 147,536 & 6,897 & 146,788 & 1.00 &  12,182 & 1 & 0 & 0 \\ 
-  1920 & 147,557 & 6,898 & 146,808 & 1.00 &  12,185 & 0 & 0 & 0 \\ 
-  1921 & 147,578 & 6,899 & 146,829 & 1.00 &  12,188 & 0 & 0 & 0 \\ 
-  1922 & 147,600 & 6,900 & 146,851 & 1.00 &  12,190 & 0 & 0 & 0 \\ 
-  1923 & 147,622 & 6,901 & 146,873 & 1.00 &  12,193 & 0 & 0 & 0 \\ 
-  1924 & 147,645 & 6,902 & 146,896 & 1.00 &  12,195 & 0 & 0 & 0 \\ 
-  1925 & 147,668 & 6,903 & 146,918 & 1.00 &  12,197 & 1 & 0 & 0 \\ 
-  1926 & 147,691 & 6,904 & 146,941 & 1.00 &  12,200 & 1 & 0 & 0 \\ 
-  1927 & 147,714 & 6,905 & 146,964 & 1.00 &  12,202 & 1 & 0 & 0 \\ 
-  1928 & 147,737 & 6,906 & 146,987 & 1.00 &  12,203 & 1 & 0 & 0 \\ 
-  1929 & 147,761 & 6,907 & 147,011 & 1.00 &  12,205 & 1 & 0 & 0 \\ 
-  1930 & 147,785 & 6,908 & 147,035 & 1.00 &  12,206 & 1 & 0 & 0 \\ 
-  1931 & 147,809 & 6,909 & 147,059 & 1.00 &  12,207 & 1 & 0 & 0 \\ 
-  1932 & 147,834 & 6,910 & 147,084 & 1.00 &  12,208 & 1 & 0 & 0 \\ 
-  1933 & 147,859 & 6,911 & 147,109 & 1.00 &  12,209 & 1 & 0 & 0 \\ 
-  1934 & 147,883 & 6,913 & 147,133 & 1.00 &  12,212 & 1 & 0 & 0 \\ 
-  1935 & 147,906 & 6,914 & 147,155 & 1.00 &  12,216 & 3 & 0 & 0 \\ 
-  1936 & 147,923 & 6,914 & 147,172 & 1.00 &  12,225 & 8 & 0 & 0 \\ 
-  1937 & 147,946 & 6,916 & 147,195 & 1.00 &  12,239 & 2 & 0 & 0 \\ 
-  1938 & 147,969 & 6,917 & 147,218 & 1.00 &  12,263 & 3 & 0 & 0 \\ 
-  1939 & 147,991 & 6,918 & 147,238 & 1.00 &  12,297 & 6 & 0 & 0 \\ 
-  1940 & 148,011 & 6,918 & 147,256 & 1.00 &  12,394 & 10 & 0.005 & 0 \\ 
-  1941 & 148,023 & 6,918 & 147,265 & 1.00 &  12,454 & 23 & 0.005 & 0 \\ 
-  1942 & 148,037 & 6,918 & 147,274 & 1.00 &  12,526 & 30 & 0.01 & 0 \\ 
-  1943 & 148,047 & 6,917 & 147,281 & 1.00 &  12,609 & 47 & 0.09 & 0 \\ 
+1918 & 147,517 & 6,896 & 146,768 & 1.00 &  12,180 & 0 & 0.00 & 0.000 \\ 
+  1919 & 147,536 & 6,897 & 146,788 & 1.00 &  12,182 & 1 & 0.00 & 0.000 \\ 
+  1920 & 147,557 & 6,898 & 146,808 & 1.00 &  12,185 & 0 & 0.00 & 0.000 \\ 
+  1921 & 147,578 & 6,899 & 146,829 & 1.00 &  12,188 & 0 & 0.00 & 0.000 \\ 
+  1922 & 147,600 & 6,900 & 146,851 & 1.00 &  12,190 & 0 & 0.00 & 0.000 \\ 
+  1923 & 147,622 & 6,901 & 146,873 & 1.00 &  12,193 & 0 & 0.00 & 0.000 \\ 
+  1924 & 147,645 & 6,902 & 146,896 & 1.00 &  12,195 & 0 & 0.00 & 0.000 \\ 
+  1925 & 147,668 & 6,903 & 146,918 & 1.00 &  12,197 & 1 & 0.00 & 0.000 \\ 
+  1926 & 147,691 & 6,904 & 146,941 & 1.00 &  12,200 & 1 & 0.00 & 0.000 \\ 
+  1927 & 147,714 & 6,905 & 146,964 & 1.00 &  12,202 & 1 & 0.00 & 0.000 \\ 
+  1928 & 147,737 & 6,906 & 146,987 & 1.00 &  12,203 & 1 & 0.00 & 0.000 \\ 
+  1929 & 147,761 & 6,907 & 147,011 & 1.00 &  12,205 & 1 & 0.00 & 0.000 \\ 
+  1930 & 147,785 & 6,908 & 147,035 & 1.00 &  12,206 & 1 & 0.00 & 0.000 \\ 
+  1931 & 147,809 & 6,909 & 147,059 & 1.00 &  12,207 & 1 & 0.00 & 0.000 \\ 
+  1932 & 147,834 & 6,910 & 147,084 & 1.00 &  12,208 & 1 & 0.00 & 0.000 \\ 
+  1933 & 147,859 & 6,911 & 147,109 & 1.00 &  12,209 & 1 & 0.00 & 0.000 \\ 
+  1934 & 147,883 & 6,913 & 147,133 & 1.00 &  12,212 & 1 & 0.00 & 0.000 \\ 
+  1935 & 147,906 & 6,914 & 147,155 & 1.00 &  12,216 & 3 & 0.00 & 0.000 \\ 
+  1936 & 147,923 & 6,914 & 147,172 & 1.00 &  12,225 & 8 & 0.00 & 0.000 \\ 
+  1937 & 147,946 & 6,916 & 147,195 & 1.00 &  12,239 & 2 & 0.00 & 0.000 \\ 
+  1938 & 147,969 & 6,917 & 147,218 & 1.00 &  12,263 & 3 & 0.00 & 0.000 \\ 
+  1939 & 147,991 & 6,918 & 147,238 & 1.00 &  12,297 & 6 & 0.00 & 0.000 \\ 
+  1940 & 148,011 & 6,918 & 147,256 & 1.00 &  12,394 & 10 & 0.00 & 0.000 \\ 
+  1941 & 148,023 & 6,918 & 147,265 & 1.00 &  12,454 & 23 & 0.00 & 0.000 \\ 
+  1942 & 148,037 & 6,918 & 147,274 & 1.00 &  12,526 & 30 & 0.01 & 0.000 \\ 
+  1943 & 148,047 & 6,917 & 147,281 & 1.00 &  12,609 & 47 & 0.09 & 0.000 \\ 
   1944 & 147,567 & 6,891 & 146,796 & 1.00 &  12,689 & 561 & 0.14 & 0.004 \\ 
-  1945 & 146,760 & 6,847 & 145,984 & 0.99 &  12,772 & 927 & 0.285 & 0.006 \\ 
+  1945 & 146,760 & 6,847 & 145,984 & 0.99 &  12,772 & 927 & 0.28 & 0.006 \\ 
   1946 & 144,758 & 6,743 & 143,977 & 0.98 &  12,839 & 2188 & 0.16 & 0.015 \\ 
   1947 & 143,949 & 6,695 & 143,163 & 0.97 &  12,960 & 1070 & 0.09 & 0.007 \\ 
   1948 & 143,701 & 6,675 & 142,910 & 0.97 &  13,128 & 568 & 0.11 & 0.004 \\ 
   1949 & 143,387 & 6,651 & 142,588 & 0.96 &  13,323 & 688 & 0.14 & 0.005 \\ 
-  1950 & 142,922 & 6,619 & 142,112 & 0.96 &  13,520 & 905 & 0.205 & 0.006 \\ 
-  1951 & 142,041 & 6,565 & 141,219 & 0.95 &  13,651 & 1399 & 0.23 & 0.01 \\ 
-  1952 & 141,037 & 6,504 & 140,204 & 0.94 &  13,628 & 1616 & 0.315 & 0.012 \\ 
-  1953 & 139,363 & 6,408 & 138,525 & 0.93 &  13,345 & 2394 & 0.255 & 0.017 \\ 
-  1954 & 138,415 & 6,346 & 137,584 & 0.92 &  12,835 & 1772 & 0.335 & 0.013 \\ 
-  1955 & 136,769 & 6,251 & 135,959 & 0.91 &  12,144 & 2559 & 0.285 & 0.019 \\ 
-  1956 & 135,740 & 6,188 & 134,964 & 0.90 &  11,352 & 2000 & 0.4 & 0.015 \\ 
-  1957 & 133,540 & 6,072 & 132,809 & 0.88 &  10,644 & 3192 & 0.365 & 0.024 \\ 
+  1950 & 142,922 & 6,619 & 142,112 & 0.96 &  13,520 & 905 & 0.20 & 0.006 \\ 
+  1951 & 142,041 & 6,565 & 141,219 & 0.95 &  13,651 & 1399 & 0.23 & 0.010 \\ 
+  1952 & 141,037 & 6,504 & 140,204 & 0.94 &  13,628 & 1616 & 0.32 & 0.012 \\ 
+  1953 & 139,363 & 6,408 & 138,525 & 0.93 &  13,345 & 2394 & 0.26 & 0.017 \\ 
+  1954 & 138,415 & 6,346 & 137,584 & 0.92 &  12,835 & 1772 & 0.34 & 0.013 \\ 
+  1955 & 136,769 & 6,251 & 135,959 & 0.91 &  12,144 & 2559 & 0.28 & 0.019 \\ 
+  1956 & 135,740 & 6,188 & 134,964 & 0.90 &  11,352 & 2000 & 0.40 & 0.015 \\ 
+  1957 & 133,540 & 6,072 & 132,809 & 0.88 &  10,644 & 3192 & 0.36 & 0.024 \\ 
   1958 & 131,783 & 5,985 & 131,099 & 0.87 &  10,134 & 2734 & 0.31 & 0.021 \\ 
-  1959 & 130,539 & 5,932 & 129,894 & 0.86 &   9,914 & 2151 & 0.205 & 0.017 \\ 
-  1960 & 130,066 & 5,925 & 129,446 & 0.86 &  10,125 & 1262 & 0.33 & 0.01 \\ 
+  1959 & 130,539 & 5,932 & 129,894 & 0.86 &   9,914 & 2151 & 0.20 & 0.017 \\ 
+  1960 & 130,066 & 5,925 & 129,446 & 0.86 &  10,125 & 1262 & 0.33 & 0.010 \\ 
   1961 & 128,365 & 5,864 & 127,751 & 0.85 &  10,850 & 2364 & 0.42 & 0.019 \\ 
-  1962 & 125,624 & 5,755 & 124,989 & 0.83 &  11,567 & 3321 & 0.505 & 0.027 \\ 
-  1963 & 121,776 & 5,588 & 121,100 & 0.81 &  10,839 & 4414 & 0.6 & 0.036 \\ 
+  1962 & 125,624 & 5,755 & 124,989 & 0.83 &  11,567 & 3321 & 0.50 & 0.027 \\ 
+  1963 & 121,776 & 5,588 & 121,100 & 0.81 &  10,839 & 4414 & 0.60 & 0.036 \\ 
   1964 & 116,537 & 5,343 & 115,843 & 0.77 &   9,191 & 5869 & 0.63 & 0.051 \\ 
-  1965 & 111,044 & 5,076 & 110,409 & 0.74 &   8,103 & 6223 & 0.705 & 0.056 \\ 
-  1966 & 104,043 & 4,729 & 103,498 & 0.69 &   7,551 & 7818 & 0.9 & 0.076 \\ 
+  1965 & 111,044 & 5,076 & 110,409 & 0.74 &   8,103 & 6223 & 0.70 & 0.056 \\ 
+  1966 & 104,043 & 4,729 & 103,498 & 0.69 &   7,551 & 7818 & 0.90 & 0.076 \\ 
   1967 & 86,087 & 3,840 & 85,602 & 0.56 &   7,055 & 18964 & 0.89 & 0.222 \\ 
-  1968 & 72,717 & 3,175 & 72,263 & 0.46 &   7,372 & 14650 & 0.855 & 0.203 \\ 
+  1968 & 72,717 & 3,175 & 72,263 & 0.46 &   7,372 & 14650 & 0.85 & 0.203 \\ 
   1969 & 64,452 & 2,766 & 64,009 & 0.40 &  10,218 & 9717 & 0.51 & 0.152 \\ 
-  1970 & 63,791 & 2,732 & 63,276 & 0.40 &  16,959 & 2188 & 0.525 & 0.035 \\ 
-  1971 & 63,133 & 2,698 & 62,420 & 0.39 &   7,817 & 2307 & 0.475 & 0.037 \\ 
+  1970 & 63,791 & 2,732 & 63,276 & 0.40 &  16,959 & 2188 & 0.52 & 0.035 \\ 
+  1971 & 63,133 & 2,698 & 62,420 & 0.39 &   7,817 & 2307 & 0.47 & 0.037 \\ 
   1972 & 63,119 & 2,683 & 62,231 & 0.39 &   5,659 & 1909 & 0.47 & 0.031 \\ 
-  1973 & 63,334 & 2,665 & 62,888 & 0.39 &   5,700 & 1892 & 0.57 & 0.03 \\ 
+  1973 & 63,334 & 2,665 & 62,888 & 0.39 &   5,700 & 1892 & 0.57 & 0.030 \\ 
   1974 & 62,677 & 2,608 & 62,329 & 0.38 &   5,770 & 2646 & 0.53 & 0.042 \\ 
-  1975 & 62,265 & 2,569 & 61,910 & 0.37 &   7,357 & 2277 & 0.355 & 0.037 \\ 
-  1976 & 62,796 & 2,595 & 62,421 & 0.38 &   5,666 & 1185 & 0.415 & 0.019 \\ 
-  1977 & 62,849 & 2,629 & 62,421 & 0.38 &   7,200 & 1514 & 0.365 & 0.024 \\ 
-  1978 & 62,998 & 2,678 & 62,631 & 0.39 &   5,072 & 1282 & 0.48 & 0.02 \\ 
+  1975 & 62,265 & 2,569 & 61,910 & 0.37 &   7,357 & 2277 & 0.35 & 0.037 \\ 
+  1976 & 62,796 & 2,595 & 62,421 & 0.38 &   5,666 & 1185 & 0.41 & 0.019 \\ 
+  1977 & 62,849 & 2,629 & 62,421 & 0.38 &   7,200 & 1514 & 0.36 & 0.024 \\ 
+  1978 & 62,998 & 2,678 & 62,631 & 0.39 &   5,072 & 1282 & 0.48 & 0.020 \\ 
   1979 & 62,265 & 2,680 & 61,856 & 0.39 &   5,649 & 2008 & 0.41 & 0.032 \\ 
-  1980 & 61,874 & 2,684 & 61,553 & 0.39 &   5,969 & 1546 & 0.445 & 0.025 \\ 
-  1981 & 61,152 & 2,668 & 60,796 & 0.39 &   7,753 & 1731 & 0.385 & 0.028 \\ 
+  1980 & 61,874 & 2,684 & 61,553 & 0.39 &   5,969 & 1546 & 0.44 & 0.025 \\ 
+  1981 & 61,152 & 2,668 & 60,796 & 0.39 &   7,753 & 1731 & 0.38 & 0.028 \\ 
   1982 & 60,714 & 2,662 & 60,309 & 0.39 &  11,662 & 1382 & 0.32 & 0.023 \\ 
-  1983 & 60,622 & 2,667 & 60,085 & 0.39 &  10,769 & 1058 & 0.435 & 0.018 \\ 
+  1983 & 60,622 & 2,667 & 60,085 & 0.39 &  10,769 & 1058 & 0.43 & 0.018 \\ 
   1984 & 60,117 & 2,641 & 59,422 & 0.38 &   8,042 & 1629 & 0.44 & 0.027 \\ 
-  1985 & 59,818 & 2,608 & 59,202 & 0.38 &   7,756 & 1659 & 0.405 & 0.028 \\ 
-  1986 & 59,898 & 2,581 & 59,408 & 0.37 &   8,037 & 1425 & 0.4 & 0.024 \\ 
-  1987 & 60,094 & 2,555 & 59,614 & 0.37 &   7,574 & 1376 & 0.345 & 0.023 \\ 
-  1988 & 60,616 & 2,551 & 60,125 & 0.37 &   9,387 & 1107 & 0.4 & 0.018 \\ 
-  1989 & 60,922 & 2,550 & 60,411 & 0.37 &  16,275 & 1382 & 0.415 & 0.023 \\ 
-  1990 & 61,254 & 2,561 & 60,568 & 0.37 &  15,636 & 1478 & 0.345 & 0.024 \\ 
+  1985 & 59,818 & 2,608 & 59,202 & 0.38 &   7,756 & 1659 & 0.40 & 0.028 \\ 
+  1986 & 59,898 & 2,581 & 59,408 & 0.37 &   8,037 & 1425 & 0.40 & 0.024 \\ 
+  1987 & 60,094 & 2,555 & 59,614 & 0.37 &   7,574 & 1376 & 0.34 & 0.023 \\ 
+  1988 & 60,616 & 2,551 & 60,125 & 0.37 &   9,387 & 1107 & 0.40 & 0.018 \\ 
+  1989 & 60,922 & 2,550 & 60,411 & 0.37 &  16,275 & 1382 & 0.41 & 0.023 \\ 
+  1990 & 61,254 & 2,561 & 60,568 & 0.37 &  15,636 & 1478 & 0.34 & 0.024 \\ 
   1991 & 62,209 & 2,592 & 61,241 & 0.38 &   6,924 & 1127 & 0.41 & 0.018 \\ 
-  1992 & 63,156 & 2,604 & 62,343 & 0.38 &   4,464 & 1483 & 0.425 & 0.024 \\ 
-  1993 & 64,118 & 2,608 & 63,732 & 0.38 &   4,778 & 1571 & 0.395 & 0.025 \\ 
-  1994 & 65,023 & 2,621 & 64,732 & 0.38 &   9,705 & 1417 & 0.345 & 0.022 \\ 
+  1992 & 63,156 & 2,604 & 62,343 & 0.38 &   4,464 & 1483 & 0.42 & 0.024 \\ 
+  1993 & 64,118 & 2,608 & 63,732 & 0.38 &   4,778 & 1571 & 0.40 & 0.025 \\ 
+  1994 & 65,023 & 2,621 & 64,732 & 0.38 &   9,705 & 1417 & 0.34 & 0.022 \\ 
   1995 & 65,959 & 2,656 & 65,585 & 0.39 &   9,946 & 1180 & 0.29 & 0.018 \\ 
-  1996 & 66,969 & 2,725 & 66,381 & 0.40 &   5,164 & 956 & 0.265 & 0.014 \\ 
+  1996 & 66,969 & 2,725 & 66,381 & 0.40 &   5,164 & 956 & 0.26 & 0.014 \\ 
   1997 & 67,979 & 2,819 & 67,446 & 0.41 &   4,736 & 883 & 0.22 & 0.013 \\ 
-  1998 & 68,964 & 2,913 & 68,656 & 0.42 &   3,507 & 718 & 0.22 & 0.01 \\ 
-  1999 & 69,666 & 2,982 & 69,351 & 0.43 &  21,662 & 725 & 0.175 & 0.01 \\ 
+  1998 & 68,964 & 2,913 & 68,656 & 0.42 &   3,507 & 718 & 0.22 & 0.010 \\ 
+  1999 & 69,666 & 2,982 & 69,351 & 0.43 &  21,662 & 725 & 0.17 & 0.010 \\ 
   2000 & 70,446 & 3,037 & 69,912 & 0.44 &  32,360 & 563 & 0.05 & 0.008 \\ 
   2001 & 71,921 & 3,107 & 70,473 & 0.45 &   9,819 & 161 & 0.09 & 0.002 \\ 
-  2002 & 74,097 & 3,171 & 72,483 & 0.46 &   5,377 & 297 & 0.055 & 0.004 \\ 
+  2002 & 74,097 & 3,171 & 72,483 & 0.46 &   5,377 & 297 & 0.06 & 0.004 \\ 
   2003 & 76,945 & 3,230 & 76,420 & 0.47 &   2,676 & 179 & 0.05 & 0.002 \\ 
-  2004 & 79,589 & 3,274 & 79,292 & 0.47 &   6,757 & 158 & 0.045 & 0.002 \\ 
-  2005 & 81,950 & 3,318 & 81,728 & 0.48 &   3,265 & 149 & 0.025 & 0.002 \\ 
-  2006 & 83,973 & 3,412 & 83,613 & 0.49 &   3,592 & 78 & 0.025 & 0.001 \\ 
-  2007 & 85,564 & 3,571 & 85,358 & 0.52 &   3,462 & 86 & 0.045 & 0.001 \\ 
-  2008 & 86,802 & 3,745 & 86,308 & 0.54 & 116,128 & 159 & 0.035 & 0.002 \\ 
+  2004 & 79,589 & 3,274 & 79,292 & 0.47 &   6,757 & 158 & 0.04 & 0.002 \\ 
+  2005 & 81,950 & 3,318 & 81,728 & 0.48 &   3,265 & 149 & 0.02 & 0.002 \\ 
+  2006 & 83,973 & 3,412 & 83,613 & 0.49 &   3,592 & 78 & 0.02 & 0.001 \\ 
+  2007 & 85,564 & 3,571 & 85,358 & 0.52 &   3,462 & 86 & 0.04 & 0.001 \\ 
+  2008 & 86,802 & 3,745 & 86,308 & 0.54 & 116,128 & 159 & 0.04 & 0.002 \\ 
   2009 & 88,561 & 3,885 & 86,803 & 0.56 &   4,731 & 135 & 0.05 & 0.002 \\ 
-  2010 & 92,115 & 3,976 & 86,769 & 0.58 &   7,499 & 194 & 0.045 & 0.002 \\ 
-  2011 & 98,527 & 4,032 & 98,173 & 0.58 &  15,198 & 183 & 0.015 & 0.002 \\ 
-  2012 & 104,262 & 4,067 & 103,709 & 0.59 &   2,101 & 62 & 0.015 & 0.001 \\ 
-  2013 & 110,043 & 4,091 & 109,254 & 0.59 &  29,027 & 60 & 0.015 & 0.001 \\ 
-  2014 & 115,579 & 4,197 & 115,075 & 0.61 &   4,630 & 58 & 0.015 & 0.001 \\ 
-  2015 & 120,592 & 4,516 & 119,187 & 0.65 &  10,661 & 56 & 0.015 & 0 \\ 
-  2016 & 125,377 & 4,931 & 124,995 & 0.72 &  11,016 & 61 & 0.015 & 0 \\ 
+  2010 & 92,115 & 3,976 & 86,769 & 0.58 &   7,499 & 194 & 0.04 & 0.002 \\ 
+  2011 & 98,527 & 4,032 & 98,173 & 0.58 &  15,198 & 183 & 0.01 & 0.002 \\ 
+  2012 & 104,262 & 4,067 & 103,709 & 0.59 &   2,101 & 62 & 0.01 & 0.001 \\ 
+  2013 & 110,043 & 4,091 & 109,254 & 0.59 &  29,027 & 60 & 0.01 & 0.001 \\ 
+  2014 & 115,579 & 4,197 & 115,075 & 0.61 &   4,630 & 58 & 0.01 & 0.001 \\ 
+  2015 & 120,592 & 4,516 & 119,187 & 0.65 &  10,661 & 56 & 0.01 & 0.000 \\ 
+  2016 & 125,377 & 4,931 & 124,995 & 0.72 &  11,016 & 61 & 0.01 & 0.000 \\ 
   2017 & 129,191 & 5,280 & 128,529 & 0.77 &  11,253 & 68 & 0.05 & 0.001 \\ 
-  2018 & 132,203 & 5,538 & 131,522 & 0.80 &  11,414 & - & - & - \\ 
-  2019 & 134,616 & 5,741 & 133,922 & 0.83 &  11,534 & - & - & - \\ 
-  2020 & 132,436 & 5,744 & 131,733 & 0.83 &  11,535 & - & - & - \\ 
-  2021 & 129,963 & 5,720 & 129,255 & 0.83 &  11,522 & - & - & - \\ 
-  2022 & 127,330 & 5,662 & 126,622 & 0.82 &  11,488 & - & - & - \\ 
-  2023 & 124,629 & 5,581 & 123,922 & 0.81 &  11,440 & - & - & - \\ 
-  2024 & 121,930 & 5,488 & 121,226 & 0.80 &  11,383 & - & - & - \\ 
-  2025 & 119,282 & 5,387 & 118,581 & 0.78 &  11,321 & - & - & - \\ 
-  2026 & 116,712 & 5,283 & 116,014 & 0.77 &  11,255 & - & - & - \\ 
-  2027 & 114,237 & 5,178 & 113,544 & 0.75 &  11,186 & - & - & - \\ 
-  2028 & 111,867 & 5,073 & 111,178 & 0.74 &  11,116 & - & - & - \\ 
    \hline
 \hline
 \label{tab:Timeseries_mod1}
@@ -5160,9 +5149,9 @@ and the STAT team agreed that in the absence of information regarding
 steepness the base model should use the median of the prior. However,
 upon review by the SSC, it was concluded that the results of the
 assessment model were implausible when the steepness prior of 0.72. The
-SSC Groundfish Sub-Committee requested additional model exploration
-regarding steepness and re-examining the information the Triennial shelf
-survey may contain.
+SSC Groundfish Sub-Committee requested additional model exploration be
+done for the September 28, 2017 meeting regarding steepness and
+re-examining the information the Triennial shelf survey may contain.
 
 Preliminary models included the Triennial shelf survey which was removed
 from the final base model during the STAR panel due to model lack of fit
@@ -5172,12 +5161,12 @@ population off the US west coast. Additionally, the model results with
 and without the Triennial survey data were negligible indicating that
 the other sources of information were the more influential data in the
 model. However, profiles over steepness from preliminary models which
-included the Triennial survey indicated that the index of abundance from
-this survey supported low steepness values (there was no information
-from the length or age composition data). The perceived information
-regarding steepness from this survey is due to a change in abundance
-between the first two data points of the Triennial survey index, 1980
-and 1983, which are higher than the subsequent years which drop to lower
+included the Triennial shelf survey indicated that the index of
+abundance supported low steepness values (there was no information from
+the length or age composition data). The perceived information regarding
+steepness from this index of abundance is due to a change in abundance
+between the first two data points of the Triennial shelf survey, 1980
+and 1983, which are higher than the subsequent years that drop to lower
 abundance levels from 1986 to 2004 (final year of the survey). A profile
 over steepness values when the Triennial shelf survey was used as a
 single time-series resulted in a profile that had a local minima of 0.75
@@ -5186,17 +5175,16 @@ with global minimum occurring at a steepness value of 0.27 (Figure
 steepness value of 0.27, a value that is far lower than any other
 observed steepness value for a US west coast groundfish stock, was less
 that 10\% of the unfished spawning output in 2017. The STAT team and the
-SSC agreed that this was not a plausible result given the extensive
-efforts to rebuild Pacific ocean perch.
+SSC Groundfish Sub-Committee agreed that this was not a plausible result
+given the extensive efforts to rebuild Pacific ocean perch.
 
 The models explored regarding steepness either using the median of the
-prior or the value supported by the Triennial shelf survey index lead to
-quite different estimates of current depletion for Pacific ocean perch
-in 2017. Given the insufficient information to estimate steepness within
-the model an alternative approach for determining steepness was proposed
-by Dr.~Owen Hamel during the SSC Groundfish Sub-Committee. The
-description of the proposed method from the meeting notes is provided
-below.
+prior or the value supported by the Triennial shelf survey index led to
+quite different estimates of depletion for Pacific ocean perch in 2017.
+Given the insufficient information to estimate steepness within the
+model an alternative approach for determining steepness was proposed by
+Dr.~Owen Hamel during the SSC Groundfish Sub-Committee held on September
+28, 2017. The subcommittee states that:
 
 \emph{The GFSC {[}Groundfish Sub-Committee{]} therefore concluded that
 the available data are insufficient to estimate steepness. It is usual
@@ -5220,7 +5208,7 @@ the base model be revised to fix steepness to 0.5. The final base model
 should be retuned, checked by jittering, and presented to the SSC for
 final approval and adoption.}
 
-The STAT team agreed with this recommendation to fix steepness at 0.50
+The STAT team agreed with the recommendation to fix steepness at 0.50
 for the Pacific ocean perch base model.
 
 \begin{figure}
