Final minor edits to appendix d

--- a/PacificOceanPerch2017_Assessment.tex
+++ b/PacificOceanPerch2017_Assessment.tex
@@ -5148,10 +5148,13 @@ week of the STAR panel after many discussions both the STAR panel and
 the STAT team agreed that in the absence of information regarding
 steepness the base model should use the median of the prior. However,
 upon review by the SSC, it was concluded that the results of the
-assessment model were implausible when the steepness prior of 0.72. The
-SSC Groundfish Sub-Committee requested additional model exploration be
-done for the September 28, 2017 meeting regarding steepness and
-re-examining the information provied by the Triennial shelf survey.
+assessment model were implausible when the steepness prior of 0.72. In
+particular, the value of catchability for Pacific ocean perch from the
+NWFSC shelf-slope survey was 0.05, far below that for other rockfish
+species observed off the US west coast. The SSC Groundfish Sub-Committee
+requested additional model exploration be done for the September 28,
+2017 meeting regarding steepness and re-examining the information
+provied by the Triennial shelf survey.
 
 Preliminary models included the Triennial shelf survey which was removed
 from the final base model during the STAR panel due to model lack of fit
