Edits  to the page 1 of 2 sections

--- a/PacificOceanPerch2017_Assessment.tex
+++ b/PacificOceanPerch2017_Assessment.tex
@@ -4397,7 +4397,7 @@ and open bubbles are negative residuals (observed \textless{} expected).
 \begin{figure}
 \centering
 \includegraphics{r4ss/plots_mod1/comp_lenfit_residsflt1mkt2_page4.png}
-\caption{Pearson residuals, retained, Fishery (max=3.41) (plot 4 of 4)\\
+\caption{Pearson residuals, retained, Fishery (max=3.41)\\
 Closed bubbles are positive residuals (observed \textgreater{} expected)
 and open bubbles are negative residuals (observed \textless{} expected).
 \label{fig:fishery_len_pearson}}
@@ -4541,7 +4541,7 @@ model fits are shown. \label{fig:age_agg}}
 \begin{figure}
 \centering
 \includegraphics{r4ss/plots_mod1/comp_agefit_residsflt1mkt2_page2.png}
-\caption{Pearson residuals, retained, Fishery (max=5.41) (plot 2 of 2)\\
+\caption{Pearson residuals, retained, Fishery (max=5.41)\\
 Closed bubbles are positive residuals (observed \textgreater{} expected)
 and open bubbles are negative residuals (observed \textless{} expected).
 \label{fig:fishery_age_pearson}}
@@ -4851,22 +4851,22 @@ Data}\label{appendix-a.-detailed-fit-to-length-composition-data}
 \begin{figure}
 \centering
 \includegraphics{r4ss/plots_mod1/comp_lenfit_flt1mkt2_page2.png}
-\caption{Length comps, retained, Fishery (plot 1 of 4) (plot 2 of 4)
+\caption{Length comps, retained, Fishery (plot 2 of 4)
 \label{fig:length_fits}}
 \end{figure}
 
 \begin{figure}
 \centering
 \includegraphics{r4ss/plots_mod1/comp_lenfit_flt1mkt2_page3.png}
-\caption{Length comps, retained, Fishery (plot 1 of 4) (plot 2 of 4)
-(plot 3 of 4) \label{fig:length_fits}}
+\caption{Length comps, retained, Fishery (plot 3 of 4)
+\label{fig:length_fits}}
 \end{figure}
 
 \begin{figure}
 \centering
 \includegraphics{r4ss/plots_mod1/comp_lenfit_flt1mkt2_page4.png}
-\caption{Length comps, retained, Fishery (plot 1 of 4) (plot 2 of 4)
-(plot 3 of 4) (plot 4 of 4) \label{fig:length_fits}}
+\caption{Length comps, retained, Fishery (plot 4 of 4)
+\label{fig:length_fits}}
 \end{figure}
 
 \begin{figure}
@@ -4919,7 +4919,7 @@ Data}\label{appendix-b.-detailed-fit-to-age-composition-data}
 \begin{figure}
 \centering
 \includegraphics{r4ss/plots_mod1/comp_agefit_flt1mkt2_page2.png}
-\caption{Age comps, retained, Fishery (plot 1 of 2) (plot 2 of 2)
+\caption{Age comps, retained, Fishery (plot 2 of 2)
 \label{fig:age_fits}}
 \end{figure}
 
